--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-gray-50">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,7 +9,7 @@
   <title>CompanyX</title>
 </head>
 
-<body>
+<body class="h-full">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
